Changed the name

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   "assets/Raj Background Removed.png" 
           type = "image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css" />
-  <title>Raj Gautam- Software Developer and Mentor</title>
-  <meta name="description" content="Raj Gautam- Software Developer and Mentor" />
+  <title>Utkarsh Pandey- Software Developer </title>
+  <meta name="description" content="Utkarsh Pandey- Software Developer and Mentor" />
 </head>
 
 <body>
@@ -70,7 +70,7 @@
         <h1 class="heading-primary home-hero__heading-primary">
           <span class="heading-primary__sm"> Hello 👋</span>
           <span class="text heading-primary__main container">
-            It's me <span class="text">Raj Gautam</span> <br/>
+            It's me <span class="text">Utkarsh Pandey </span> <br/>
            And I'm a <span class="text sec-text">Web Developer</span>
           </span>
         </h1>
