--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           src="./assets/Raj.jpeg"
           alt="logo Image" class="main-header__logo-img" />
       </div>
-      <h4 class="main-header__logo-text">Raj Gautam</h4>
+      <h4 class="main-header__logo-text">Utkarsh Pandey</h4>
     </div>
     <nav class="main-header__navigation">
       <ul class="main-header__navigation-links">
@@ -353,7 +353,7 @@
       <div class="main-container">
         <p class="main-footer__bottom-txt">
           <a target="_blank" href="">Made with ❤️ by
-          <a target="_blank" href="">Raj Gautam</a>
+          <a target="_blank" href="">Utkarsh Pandey</a>
         </p>
       </div>
     </div>
