Updated my index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <link rel = "icon" href = 
-  "assets/Raj Background Removed.png" 
+  "assets/Pandey1.jpg" 
           type = "image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css" />
-  <title>Utkarsh Pandey- Software Developer </title>
-  <meta name="description" content="Utkarsh Pandey- Software Developer and Mentor" />
+  <title>Utkarsh Pandey - Software Developer</title>
+  <meta name="description" content="Utkarsh Pandey- Software Developer" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="main-header__logo-container">
       <div class="main-header__logo-img-cont">
         <img
-          src="./assets/Raj.jpeg"
+          src="./assets/Pandey1.jpg"
           alt="logo Image" class="main-header__logo-img" />
       </div>
       <h4 class="main-header__logo-text">Utkarsh Pandey</h4>
@@ -68,24 +68,24 @@
     <div class="home-hero__content main_container">
       <div class="home-hero__info">
         <h1 class="heading-primary home-hero__heading-primary">
-          <span class="heading-primary__sm"> Hello 👋</span>
+          <span class="heading-primary__sm"> HELLO! 👋</span>
           <span class="text heading-primary__main container">
-            It's me <span class="text">Utkarsh Pandey </span> <br/>
+            It's me <span class="text">Utkarsh Pandey</span> <br/>
            And I'm a <span class="text sec-text">Web Developer</span>
           </span>
         </h1>
         <button class="btn btn-theme home-hero__btn-theme"><a href="./index.html#projects">Projects</a></button>
-        <button class="btn btn-inv home-hero__btn-theme">Contact</button>
+        <button class="btn1 btn-inv1 home-hero__btn-theme1"><span class="span1">Contact</span> </button>
       </div>
       <div>
-        <img src="assets/Raj_new.png" style="height: 400px;"/>
+        <img src="assets/Pandey.jpg" style="height: 400px;width: 400px;border-radius: 300px;"/>
       </div>
     </div>
   </section>
   <section id="about" class="about main-section">
     <div class="main-container">
       <h2 class="heading-secondary projects__heading-secondary">
-        <span class="heading-secondary__sm"> About 🦄</span>
+        <span class="heading-secondary__sm"> ABOUT 🦄</span>
         <span class="heading-secondary__main">
           Here you will find more information about me, what I do, and list of my current skills in programming
       </h2>
@@ -97,12 +97,12 @@
             </h3>
             <p class="text-primary about__text-primary">
               <span>
-                I am a self-taught Full-Stack Web Developer having experience in MERN Stack Technologies.
-                I am Junior at <b>Harcourt Butler Technical University </b>and have completed my Higher Secondary Education in 2020 
-                from <b>Basubaral Public School </b>and High School from<b> Sobtis Public School </b>in 2018.
+                I am a self-taught Front-End Web Developer having experience in ReactJS.
+                I am Junior at <strong>Harcourt Butler Technical University </strong>and have completed my Higher Secondary Education in 2020 and High School in 2018 
+                from <strong>St. Antony's Inter College, Lucknow</strong>.
               </span>
               <span>
-                I have worked with various companies from past one year as Frontend Developer Intern<b> in Business Techlabs(Australia, Remote)</b>, Software Developer Intern in <b>Material Depot(YC W22)(Bengaluru,India)</b> and DSA and Web Development Mentor in <b>Great Learning</b> and <b>The 10x Academy</b>
+                I have worked on various projects as a beginner and I'm upto my first project with a big company.
               </span>
             </p>
             <button class="btn btn-theme about__btn-theme" ><a href="./index.html#projects">Projects</a></button>
@@ -124,9 +124,9 @@
               <li class="about__skill">node</li>
               <li class="about__skill">git</li>
               <li class="about__skill">vscode</li>
-              <li class="about__skill">linux</li>
-              <li class="about__skill">javascript</li>
-              <li class="about__skill">react</li>
+              <li class="about__skill">C</li>
+              <li class="about__skill">java</li>
+              <li class="about__skill">python</li>
             </ul>
           </div>
         </div>
@@ -168,7 +168,7 @@
   <section id="projects" class="projects main-section">
     <div class="main-container">
       <h2 class="heading-secondary projects__heading-secondary">
-        <span class="heading-secondary__sm"> Projects 🛠️</span>
+        <span class="heading-secondary__sm"> PROJECTS 🛠️</span>
         <span class="heading-secondary__main">
           Here you will find some of the personal and clients projects that I created with the project details
         </span>
@@ -183,29 +183,25 @@
             </div>
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/mock.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/sudoku.png" alt="Project Image" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Project Name
+                <strong>Sudoku Solver</strong> 
               </h3>
 
               <p class="text-primary projects__list-item-text-primary">
                 <span>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Error, aliquid! Itaque corrupti magnam fugiat mollitia
-                  labore magni saepe veritatis voluptatum alias fugit.
-                  Explicabo ducimus
+                  A simple java program that solves any Sudoku puzzle for you. The code involves the use of java backtracking and recursion. 
                 </span>
                
                 <span>
-                  sapiente aut corporis odio repellendus? Lorem ipsum dolor
-                  sit amet, consectetur adipisicing elit
+                  This simple project has a very little use of interface.
                 </span>
               </p>
               <button class="btn btn-theme projects__btn-theme">
                 Live Link
               </button>
-              <button class="btn btn-inv projects__btn-inv">Code Link</button>
+              <button class="btn btn-inv projects__btn-inv"><a href="https://github.com/codeup23/sudoku.git">Code Link</button></a>
             </div>
           </div>
           <div class="projects__list-item projects__list-item--inv">
@@ -216,28 +212,24 @@
             </div>
             <div class="projects__list-item-details">
               <div class="projects__list-item-img-cont">
-                <img src="./assets/mock.png" alt="Project Image" class="projects__list-item-img" />
+                <img src="./assets/homepage.png" alt="Project Image" class="projects__list-item-img1" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Project Name
+                <strong>Home Page</strong> 
               </h3>
 
               <p class="text-primary projects__list-item-text-primary">
                 <span>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Error, aliquid! Itaque corrupti magnam fugiat mollitia
-                  labore magni saepe veritatis voluptatum alias fugit.
-                  Explicabo ducimus
+                  This is my very first web page that I made with the use of basic HTML and CSS. This was made for a local boutique shop as their home page.
                 </span>
                 <span>
-                  sapiente aut corporis odio repellendus? Lorem ipsum dolor
-                  sit amet, consectetur adipisicing elit
+                  The page was kept very responsive for the customers and the design too was very basic.
                 </span>
               </p>
-              <button class="btn btn-theme projects__btn-theme">
-                Live Link
+              <button class="btn btn-theme projects__btn-theme"><a href="https://codeup23.github.io/First-project/">
+                Live Link</a>
               </button>
-              <button class="btn btn-inv projects__btn-inv">Code Link</button>
+              <button class="btn btn-inv projects__btn-inv" ><a href="https://github.com/codeup23/First-project.git">Code Link</a></button>
             </div>
           </div>
           <div class="projects__list-item">
@@ -246,7 +238,7 @@
                 <img src="./assets/mock.png" alt="Project Image" class="projects__list-item-img" />
               </div>
               <h3 class="heading-tertiary projects__list-item-heading-tertiary">
-                Project Name
+                <strong>Project Name</strong>
               </h3>
 
               <p class="text-primary projects__list-item-text-primary">
@@ -280,7 +272,7 @@
   <section id="contact" class="contact main-section">
     <div class="main-container">
       <h2 class="heading-secondary">
-        <span class="heading-secondary__sm"> Contact 📞</span>
+        <span class="heading-secondary__sm"> CONTACT 📞</span>
         <span class="heading-secondary__main">
           Feel free to Contact me by submitting the form below and I will get back to you as soon as possible
         </span>
@@ -327,23 +319,23 @@
         </ul>
         <div class="main-footer__mid-line"></div>
         <div class="main-footer__socials">
-          <a href="#" class="main-footer__social-link">
+          <a href="https://github.com/codeup23" class="main-footer__social-link">
             <img
               src="https://d33wubrfki0l68.cloudfront.net/5557d5a11584d7201a38ee1a95200f57a4cc0f88/15085/assets/png/github-ico.png"
               alt="" class="main-footer__social-link-icon" />
           </a>
-          <a href="#" class="main-footer__social-link">
+          <a href="https://www.instagram.com/utkarsh_2302/" class="main-footer__social-link">
             <img src="./assets/icons8-instagram-48.png" alt="" class="main-footer__social-link-icon" />
           </a>
-          <a href="#" class="main-footer__social-link">
+          <a href="https://twitter.com/Utkarshhhhhh_" class="main-footer__social-link">
             <img src="./assets/icons8-twitter-50.png" alt="" class="main-footer__social-link-icon" />
           </a>
-          <a href="#" class="main-footer__social-link">
+          <a href="https://www.linkedin.com/in/utkarsh-pandey0223/" class="main-footer__social-link">
             <img
               src="https://d33wubrfki0l68.cloudfront.net/7f29579dde49e02480372aa49f7189c5536b0118/34b92/assets/png/linkedin-ico.png"
               alt="" class="main-footer__social-link-icon" />
           </a>
-          <a href="#" class="main-footer__social-link">
+          <a href="https://in.pinterest.com/utkarshpandey084/" class="main-footer__social-link">
             <img src="./assets/icons8-pinterest-64.png" alt="" class="main-footer__social-link-icon" />
           </a>
         </div>
